--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Telegram WebApp Галерея</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Telegram Галерея</title>
+  <link rel="stylesheet" href="style.css">
+  <script async src="https://telegram.org/js/telegram-widget.js?7"
+          data-telegram-login="YOUR_BOT_USERNAME"
+          data-size="large"
+          data-userpic="false"
+          data-radius="10"
+          data-auth-url="/auth/telegram"
+          data-request-access="write"></script>
 </head>
 <body>
-<header>
-<button id="profileTab">Мой профиль</button>
-<button id="galleryTab">Галерея</button>
-</header>
+  <header>
+    <h1>Добро пожаловать, <span id="username">Гость</span>!</h1>
+    <nav>
+      <a href="#" id="profileTab">Профиль</a>
+      <a href="#" id="galleryTab">Галерея</a>
+    </nav>
+  </header>
 
-<main>
-<section id="profileSection">
-<h2>Мой профиль</h2>
-<p id="userName">Привет, <span id="username"></span>!</p>
-<textarea id="aboutMe" placeholder="О себе..."></textarea>
-</section>
+  <main>
+    <section id="profileSection">
+      <h2>Профиль</h2>
+      <p>ID пользователя: <span id="userId">guest</span></p>
+      <button id="addPostBtn">Добавить пост</button>
+    </section>
 
-<section id="gallerySection" style="display:none;">
-<h2>Галерея</h2>
-<div>
-<label>Фильтр по автору: <input id="filterAuthor" placeholder="ID пользователя"></label>
-<label>Фильтр по тегу: <input id="filterTag" placeholder="#тег"></label>
-<button id="applyFilter">Применить</button>
-</div>
-<div id="gallery"></div>
-<button id="addPostBtn">Добавить пост</button>
-</section>
-</main>
+    <section id="gallerySection" style="display:none;">
+      <h2>Галерея</h2>
+      <div class="filters">
+        <input type="text" id="filterAuthor" placeholder="Фильтр по автору">
+        <input type="text" id="filterTag" placeholder="Фильтр по тегу">
+        <button id="applyFilter">Применить</button>
+      </div>
+      <div id="gallery"></div>
+    </section>
+  </main>
 
-<div id="modal" class="modal" style="display:none;">
-<div class="modal-content">
-<span id="closeModal">&times;</span>
-<input type="text" id="postDesc" placeholder="Описание">
-<input type="text" id="postTags" placeholder="Хэштеги #тег">
-<input type="file" id="postImage">
-<button id="savePost">Сохранить пост</button>
-</div>
-</div>
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <h3>Новый пост</h3>
+      <input type="text" id="postDesc" placeholder="Описание">
+      <input type="text" id="postTags" placeholder="Теги через пробел">
+      <input type="file" id="postImage">
+      <button id="savePost">Сохранить</button>
+    </div>
+  </div>
 
-<footer>
-<p>Поддержать автора ❤️</p>
-</footer>
-
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
